--- a/packages/web/src/pages/LibrarySongs/LibrarySongs.scss
+++ b/packages/web/src/pages/LibrarySongs/LibrarySongs.scss
@@ -10,6 +10,7 @@
   right: 0;
   display: flex;
   align-items: center;
+  z-index: 1;
 
   select {
     color: rgb(130, 130, 130);
